--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/png" href="img/workshop.png"/>
 
   <!-- Write your Name here!-->
-  <title>Sundar Pichai</title>
+  <title>Qazi Abdurrahman</title>
 
 
   <!-- Bootstrap core CSS -->
@@ -38,7 +38,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
 
       <!--Write your Name here! -->
-      <span class="d-block d-lg-none">Sundar Pichai</span>
+      <span class="d-block d-lg-none">Qazi Abdurrahman</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -65,6 +65,9 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Interests & Hobbies</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#projects">projects</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Achievements</a>
         </li>
       </ul>
@@ -77,20 +80,20 @@
       <div class="w-100">
         <!--Enter your name! -->
 
-        <h1 class="mb-0">Sundar Pichai
+        <h1 class="mb-0">Qazi Abdurrahman
 
         </h1>
         <!--Enter your Mobile Number here! -->
-        <div class="subheading mb-5">(+92) 335-1927492 
+        <div class="subheading mb-5">(+92) 340-9877904 
           <br>
 
           <!--Enter your Email Address -->
-          <a href="mianjawadahmad@encoderbytes.com">sundarceo@google.com</a>
+          <a href="qabd1188@yahoo.com">qabd188@yahoo.com</a>
         </div>
 
         <!-- Description / About Me! (Yahha khul ke Likhen) -->
         <p class="lead mb-5">
-          Pichai Sundararajan, known as Sundar Pichai, is an Indian-American business executive. He is the chief executive officer of Alphabet Inc. and its subsidiary Google. Born in Chennai, India, Pichai earned his degree from IIT Kharagpur in metallurgical engineering.
+          Qazi Abdurrahman, known as Abbdurrahman, is an pakistani business executive. He is the chief executive officer of Alphabet Inc. and its subsidiary Google. Born in Chennai, India, Pichai earned his degree from IIT Islamabad in metallurgical engineering.
         </p>
 
 
