--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Internee</h3>
             <div class="subheading mb-3">Computer Society</div>
-            <p>Yahaa apni marzi kee baatein likh lein </p>
+            <p>Motivated and detail-oriented Computer Science undergraduate with strong fundamentals in programming, data structures, and software development. Skilled in C++, Python, and web technologies (HTML, CSS, S 4/HANNA). Eager to apply academic knowledge in a practical environment through an internship opportunity. Strong problem-solving abilities, collaborative mindset, and a passion for learning new technologies. Seeking to contribute to real-world projects while gaining industry experience.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2019 - Present</span>
