--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <a href="qabd1188@yahoo.com">qabd188@yahoo.com</a>
         </div>
 
-        <!-- Description / About Me! (Yahha khul ke Likhen) -->
+        <!-- Description / About Me!  -->
         <p class="lead mb-5">
           Qazi Abdurrahman, known as Abbdurrahman, is an pakistani business executive. He is the chief executive officer of Alphabet Inc. and its subsidiary Google. Born in Chennai, India, Pichai earned his degree from IIT Islamabad in metallurgical engineering.
         </p>
@@ -161,8 +161,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">React Native Developer</h3>
-            <div class="subheading mb-3">Reliance JIO Inc.</div>
-            <p>Jio Is Telecom Hub of India</p>
+            <div class="subheading mb-3">PTCL Inc.</div>
+            <p> PTCL Is Telecom Hub of India</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Jan 2018 - May 2019</span>
@@ -172,18 +172,18 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Full Stack Developer</h3>
-            <div class="subheading mb-3">CMS UET Peshawar 😂😂😂</div>
-            <p>CMS a place to thrive shine and die 😁</p>
+            <div class="subheading mb-3">FAST Pshawer Peshawar </div>
+            <p>"FAST Peshawar — where minds thrive, dreams shine, and egos die." 😁</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2017 - jan 2018</span>
+            <span class="text-primary">June 2025 - aug 2026</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">UI/UX Engineer</h3>
-            <div class="subheading mb-3">Hazara Students Society</div>
+            <div class="subheading mb-3">codex Students Society</div>
             <p>HSS is 😍</p>
           </div>
           <div class="resume-date text-md-right">
