--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <br>
 
           <!--Enter your Email Address -->
-          <a href="qabd1188@yahoo.com">qabd188@yahoo.com</a>
+          <a href="qabd1188@yahoo.com">qabd1188@yahoo.com</a>
         </div>
 
         <!-- Description / About Me!  -->
@@ -137,9 +137,7 @@
         
          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Founder and CEO</h3>
-            <div class="subheading mb-3">Google Inc.</div>
-            <p> Google is Love ❤❤❤❤❤</p>
+          
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Aug 2020 - Present</span>
@@ -160,9 +158,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">React Native Developer</h3>
+            <h3 class="mb-0">full stack Developer</h3>
             <div class="subheading mb-3">PTCL Inc.</div>
-            <p> PTCL Is Telecom Hub of India</p>
+            <p> PTCL Is Telecom Hub of Pakistan</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Jan 2018 - May 2019</span>
