--- a/index.html
+++ b/index.html
@@ -321,25 +321,18 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Front-End Web Development with React coursera Certificate</li>
+            Front-End Web Developer coursera Certificate</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Front-End Web UI Frameworks and Tools: Bootstrap 4 coursera Certificate</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Multiple Mobile Application Development with React Native coursera Certificate</li>
+            Multiple realtime websites Development with SAP </li>
           <li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Github Campus Advisor</li>
-          <li>
-           <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            </li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            
+         
         </ul>
       </div>
     </section>
