--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Ahmed">
    
   <!--Favicon -->
-  <link rel="icon" type="image/png" href="img/workshop.png"/>
+  <link rel="icon" type="image/png" href="profile pic.png"/>
 
   <!-- Write your Name here!-->
   <title>Qazi Abdurrahman</title>
