--- a/index.html
+++ b/index.html
@@ -190,31 +190,7 @@
 
     </section>
 
-    <hr class="m-0">
-  <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
-      <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
-
-        <div class="subheading mb-3">Technologies &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-github"></i>
-          </li>
+   <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
@@ -332,15 +308,18 @@
       </div>
     </section>
 
+  <hr class="m-0">
+
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
-        <h4> Project 1 </h4>
-        <h3> the shopping app named "one Click". One Click is a mobile shopping application designed to simplify the online buying experience.<br>
+         <h2 class="mb-5">project</h2>
+        <h3> Project 1 </h3>
+        <h4> the shopping app named "one Click". One Click is a mobile shopping application designed to simplify the online buying experience.<br>
          It allows users to browse, select, and purchase products from various categories with a user-friendly interface.<br>
-         The app emphasizes ease of use, fast navigation, and a streamlined checkout process. </h3>
+         The app emphasizes ease of use, fast navigation, and a streamlined checkout process. </h4>
 
-        <h4>Project 2 </h4>
-        <h3> portfolio known as resume which describe the complete journey of someones life. it contain sections and parts which describe each section differently </h3>
+        <h3>Project 2 </h3>
+        <h4> portfolio known as resume which describe the complete journey of someones life. it contain sections and parts which describe each section differently </h4>
       </div>
     </section>
 
