--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
       <div class="w-100">
         <h2 class="mb-5">Projects</h2>
         1.PROJECT <a href="file:///C:/Users/DELL/Desktop/summer%20sem/project%201/ONe%20Click.html">One Click</a> 
-                  
+        2.PROJECT <a href="">Tech Spark Solutions</a>          
        
       </div>
     </section>
