--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!--Write your Name here! -->
       <span class="d-block d-lg-none">Qazi Abdurrahman</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="profile pic.png" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="profilepic.jpg" alt="">
       </span>
     </a>
 
