--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
         <h2 class="mb-5">Projects</h2>
-        1.PROJECT <a href="file:///C:/Users/DELL/Desktop/summer%20sem/project%201/ONe%20Click.html">One Click</a> 
-        2.PROJECT <a href="">Tech Spark Solutions</a>          
+        1.PROJECT <a href="file:///C:/Users/DELL/Desktop/summer%20sem/project%201/ONe%20Click.html">One Click</a> <br>
+        2.PROJECT <a href="">Tech Spark Solutions</a> <br>         
        
       </div>
     </section>
